feat: call peatix api (#751)
